# P5_Segwayrmp

./: .gitignore  .gitmodules  README.md  cakes  logfile
src/CreateRoom/: CMakeLists.txt  package.xml
src/CreateRoom/src/: RoomMapper.cpp  RoomMapperTalker.cpp
src/CreateRoom/srv/: Rvizcommand.srv
src/cameralauncher/: CMakeLists.txt  package.xml
src/cameralauncher/launch/: darkrosnetwork.launch  reallaunch.launch
src/cameralauncher/msg/: ObjectList.msg  objectstruct.msg  old_objects.msg
src/cameralauncher/src/: detection_node.py
src/create_room/: CMakeLists.txt  package.xml
src/create_room/map/: MapRoom.xml
src/create_room/src/: room_mapper.cpp  room_mapper_talker.cpp
src/libsegwayrmp/: CMakeLists.txt  package.xml
src/libsegwayrmp/cmake/: segwayrmp_targets.cmake
src/libsegwayrmp/include/segwayrmp/: segwayrmp.h
src/libsegwayrmp/include/segwayrmp/impl/: rmp_io.h  rmp_serial.h
src/libsegwayrmp/src/: segwayrmp.cc
src/libsegwayrmp/src/impl/: rmp_ftd2xx.cc  rmp_io.cc  rmp_serial.cc
src/segway_rmp/src/: segway_rmp_node.cpp
src/segway_v3/segway_ros/src/segway/: move_base.py
src/segway_v3/segway_v3_config/: segway_config.bash
src/segway_v3_desktop/segway_viz/rviz/: robot_.rviz
src/segwayinterfacemsgs/: CMakeLists.txt  package.xml
src/segwayinterfacemsgs/msg/: SegwayStatusStamped.msg
src/segwayrmp2/: CMakeLists.txt  package.xml
src/segwayrmp2/config/: params.yaml
src/segwayrmp2/launch/: bringup.py  segway_rmp200_bringup.py
src/segwayrmp2/src/: segway_rmp_node.cpp  segway_rmp_node_bak.cpp
src/social_segway/: CMakeLists.txt  package.xml  rooms.bak.xml
src/social_segway/config/: costmap_common_params.yaml  gmapping.yaml
src/social_segway/filters/: angle_filter_middle.yaml
src/social_segway/launch/: bag_bringup.launch  cam_test.launch  hector_mapping.launch  move_base.launch  multi_cam.launch  segway_bringup_hector.launch  segway_bringup_nav.launch  segway_bringup_nav_acml.launch  segway_bringup_nav_hector.launch  segway_with_lidar.launch  semantic.launch  semantic_auto.launch
src/social_segway/map/: map.xml  map1.xml  map2.xml  map3.xml  map_changes.xml  map_changes1.xml  map_changes10.xml  map_changes11.xml  map_changes12.xml  map_changes13.xml  map_changes14.xml  map_changes15.xml  map_changes16.xml  map_changes17.xml  map_changes18.xml  map_changes19.xml  map_changes2.xml  map_changes20.xml  map_changes4.xml  map_changes5.xml  map_changes6.xml  map_changes7.xml  map_changes8.xml  map_changes9.xml  map_new_copy.xml  my_map.pgm  my_map.yaml  rooms.xml
src/social_segway/msg/: Object.msg  ObjectList.msg
src/social_segway/rviz/: robot.rviz
src/social_segway/scripts/: semantic_test.py  semantic_test2.py
src/social_segway/scripts/socialist/: socialist.py  talker.py  tts_stt.py
src/social_segway/src/: main_node.cpp  main_node_auto.cpp  semantic_node.cpp  simple_nav_goal.cpp
src/social_segway/srv/: CheckObject.srv  GetObjectPosById.srv  GetObjectsInRoom.srv  GetRooms.srv
src/social_segway/urdf/: lidar.xacro
src/social_segway_description/: CMakeLists.txt  package.xml
src/social_segway_description/launch/: 2d_mapless_nav_demo.launch  assisted_teleop_demo.launch  description.launch  move_base.launch  segway_bringup_nav.launch  segway_playpen.launch  segway_simulation_gazebo.launch  spawn_segway.launch
src/social_segway_description/urdf/: _d435.urdf.xacro  accessories.urdf.xacro  rmp.urdf.xacro
src/social_segway_description/worlds/: ObjectDetectionWorld.world
src/social_segway_gui/: CMakeLists.txt  config.rviz  package.xml
src/social_segway_gui/src/: gui.py
src/tf2_simpub/: CMakeLists.txt  package.xml
src/tf2_simpub/nodes/: static_turtle_tf2_broadcaster.py
src/xml_lib/: CMakeLists.txt  package.xml
src/xml_lib/include/xml_lib/: xml_lib.h
src/xml_lib/src/: xml_lib.cpp
(+6 files in other folders)
